# prizm_ros

./: .README.md.swp  CMakeLists.txt  LICENCE  README.html  README.md  detect_arduino.py  package.xml
arduino/L2Bot_MC/: L2Bot_MC.ino
arduino/PRIZM/: old.ino
arduino/PRIZM/PRIZM_MC/: PRIZM_MC.ino
cfg/: Twist.cfg
config/: params.yaml
launch/: l2bot.launch  l2bot_drive_system.launch  led_sim.launch  prizm.launch  threshold_controller.launch  twist_controller.launch
src/: l2bot.cpp  led_sim.cpp  threshold_twist.cpp  twist_controller.cpp
